/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.4/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/commons-cli/commons-cli
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.6'

    // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
    compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.7.2'

    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0-M1'
}

// Define the main class for the application
mainClassName = 'pdl.Main'


task pdl(type: Jar) {
    manifest {
        attributes 'Main-Class': 'pdl.Main'
    }
    baseName = 'pdl'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

compileJava.finalizedBy pdl


// copy the application jar to bin
task copyPdl(type: Copy) {
    from "${buildDir}/libs/pdl.jar"
    into "${rootProject.projectDir}/bin"
}

pdl.finalizedBy copyPdl

task removePdl(type: Delete) {
    delete "${rootProject.projectDir}/bin/pdl.jar"
}

clean.finalizedBy removePdl